@startuml

title __PUZZLECITO.APP's Class Diagram__\n

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.BBDDHelper {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.BBDDSchema {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.BuildConfig {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.HelpActivity {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.ImageAdapter {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.MainActivity {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.PuzzleActivity {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.PuzzlePiece {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.Score {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.ScoreRegister {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.SelectImage {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.Splash_screen {
    }
  }
  

  namespace com.example.puzzlecito {
    class com.example.puzzlecito.TouchListener {
    }
  }
  

  com.example.puzzlecito.BBDDHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.puzzlecito.HelpActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.puzzlecito.ImageAdapter -up-|> android.widget.BaseAdapter
  com.example.puzzlecito.MainActivity .up.|> android.view.Window.Callback
  com.example.puzzlecito.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.puzzlecito.PuzzleActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.puzzlecito.PuzzlePiece -up-|> androidx.appcompat.widget.AppCompatImageView
  com.example.puzzlecito.Score -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.puzzlecito.ScoreRegister -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.puzzlecito.SelectImage -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.puzzlecito.Splash_screen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.puzzlecito.TouchListener .up.|> android.view.View.OnTouchListener
  com.example.puzzlecito.TouchListener o-- com.example.puzzlecito.PuzzleActivity : activity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
